--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   <p>قد يتم تحديث هذه السياسة من وقت لآخر، وسنقوم بإشعارك داخل التطبيق عند حدوث تغييرات جوهرية.</p>
 
   <h2>7. التواصل</h2>
-  <p>للاستفسار، يمكنك التواصل معنا عبر: <strong>[بريدك الإلكتروني أو رقمك]</strong></p>
+  <p>للاستفسار، يمكنك التواصل معنا عبر: <strong>[01032548232]</strong></p>
 </body>
 </html>
